Added scrren color for linux

--- a/vimAndTmux/.tmux.conf
+++ b/vimAndTmux/.tmux.conf
@@ -17,8 +17,10 @@ bind C-a send-prefix
 #set -g utf8
 #set-window-option -g utf8 on
 
-# use 256 color
+# use xterm-256color on mac
 set -g default-terminal "xterm-256color"
+# use screen-256color on linux
+#set -g default-terminal "screen-256color"
 
 # set scrollback history
 set -g history-limit 99999
