--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,9 +18,9 @@ bind C-a send-prefix
 #set-window-option -g utf8 on
 
 # use xterm-256color on mac
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
 # use screen-256color on linux
-#set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # set scrollback history
 set -g history-limit 99999
